<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation3"
    app:startDestination="@+id/nav_home_administrador">

    <fragment
        android:id="@+id/nav_home_administrador"
        android:name="com.dev.zoologicsapp.ui.VistaAdministrador.HomeAdministrador"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_administrador" />

    <fragment
        android:id="@+id/nav_infoAdmin"
        android:name="com.dev.zoologicsapp.ui.VistaAdministrador.InformacionAdm"
        android:label="@string/textInfo"
        tools:layout="@layout/fragment_informacion_adm" />

    <fragment
        android:id="@+id/nav_usuariosAdmin"
        android:name="com.dev.zoologicsapp.ui.VistaAdministrador.UsuariosAdministrador"
        android:label="@string/textUsuA"
        tools:layout="@layout/fragment_usuarios_administrador" >
        <action
            android:id="@+id/action_UsuariosAdministrador_to_FragmentListarUsuarios"
            app:destination="@id/nav_listarUsuarios" />
    </fragment>

    <fragment
        android:id="@+id/nav_listarUsuarios"
        android:name="com.dev.zoologicsapp.FragmentListarUsuarios"
        android:label="@string/btnListar"
        tools:layout="@layout/fragment_listar_usuarios" />

    <fragment
        android:id="@+id/nav_zoologicosAdmin"
        android:name="com.dev.zoologicsapp.ui.VistaAdministrador.ZoologicosAdm"
        android:label="@string/textZooA"
        tools:layout="@layout/fragment_zoologicos_adm" />

    <fragment
        android:id="@+id/nav_animalesAdmin"
        android:name="com.dev.zoologicsapp.ui.VistaAdministrador.AnimalesAdm"
        android:label="@string/textAnimal"
        tools:layout="@layout/fragment_animales_adm" >
        <action
            android:id="@+id/action_AnimalesAdm_to_FragmentListarAnimales"
            app:destination="@id/nav_listarAnimales" />
    </fragment>

    <fragment
        android:id="@+id/nav_listarAnimales"
        android:name="com.dev.zoologicsapp.FragmentListarAnimales"
        android:label="@string/btnListar"
        tools:layout="@layout/fragment_listar_animales" />

    <fragment
        android:id="@+id/nav_especiesAdmin"
        android:name="com.dev.zoologicsapp.ui.VistaAdministrador.EspeciesAdm"
        android:label="@string/textEspecie"
        tools:layout="@layout/fragment_especies_adm" />


</navigation>